<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".counter.GameMenuFragment"
    android:background="@drawable/rounded_shape_game_menu">

    <TextView
        android:id="@+id/pauseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/pause"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginBottom="50sp"
        android:fontFamily="@font/space_age"
        android:textColor="@color/colorFont"
        tools:text="@string/pause"/>

    <Button
        android:id="@+id/btn_resume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginRight="90dp"
        android:layout_marginTop="40dp"
        android:textSize="30dp"
        android:fontFamily="@font/space_age"
        android:text="@string/resume"
        tools:text="@string/resume" />

    <Button
        android:id="@+id/btn_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="40dp"
        android:textSize="30dp"
        android:fontFamily="@font/space_age"
        android:text="@string/stop"
        tools:text="@string/stop" />

</FrameLayout>