<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/space_background_one_1"
    android:scaleType="centerCrop"
    >


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/space_background_four_1">
    </ImageView>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:textSize="45dp"
        android:fontFamily="@font/space_age"
        android:text="@string/start" />

    <Button
        android:id="@+id/btn_quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="140dp"
        android:textSize="45dp"
        android:fontFamily="@font/space_age"
        android:text="@string/quit" />

    <TextView
        android:id="@+id/GameSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:textSize="20dp"

        android:textStyle="bold"
        android:fontFamily="@font/space_age"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="170dp"
        android:text="@string/subtitle_activity_main" />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="226dp"
        android:layout_height="205dp"
        android:layout_gravity="center_horizontal|top"
        android:scaleX="1.2"
        android:scaleY="1.2"
        app:srcCompat="@drawable/app_logo" />

</FrameLayout>