<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="dadm.scaffold.GameFragment">

    <ImageView
        android:id="@+id/background_one_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/space_background_one_1"
        android:visibility="visible"
        android:contentDescription="TODO" />
    <ImageView
        android:id="@+id/background_one_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/space_background_one_2"
        android:visibility="visible" />


    <ImageView
        android:id="@+id/background_two_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/space_background_two_1"
        android:visibility="visible" />
    <ImageView
        android:id="@+id/background_two_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/space_background_two_1"
        android:visibility="visible" />


    <ImageView
        android:id="@+id/background_three_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/space_background_three_1"
        android:visibility="visible" />
    <ImageView
        android:id="@+id/background_three_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/space_background_three_1"
        android:visibility="visible" />


    <ImageView
        android:id="@+id/background_four_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/space_background_four_1"
        android:visibility="visible" />
    <ImageView
        android:id="@+id/background_four_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/space_background_four_1"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/background_five_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/space_background_five_1"
        android:visibility="visible" />
    <ImageView
        android:id="@+id/background_five_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/space_background_five_1"
        android:visibility="visible" />



    <TextView
        android:id="@+id/text_x2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="21sp"
        android:layout_marginEnd="140sp"
        android:layout_marginRight="140sp"
        android:text="@string/x2"
        android:textColor="@color/colorFont"
        android:textSize="26sp" />

    <ImageView
        android:id="@+id/img_hit3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/hit"
        android:rotation="0"
        android:src="@drawable/ship_hit3" />

    <ImageView
        android:id="@+id/img_hit4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/hit"
        android:rotation="0"
        android:src="@drawable/ship_hit4" />

    <ImageView
        android:id="@+id/img_hit0"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/hit"
        android:rotation="0"
        android:src="@drawable/ship" />

    <TextView
        android:id="@+id/text_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="21sp"
        android:layout_marginEnd="200sp"
        android:layout_marginRight="200sp"
        android:text="@string/_0"
        android:textColor="@color/colorFont"
        android:textSize="26sp" />

    <dadm.scaffold.engine.StandardGameView
        android:id="@+id/gameView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/img_hit2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/hit"
        android:rotation="0"
        android:src="@drawable/ship_hit2" />

    <ImageView
        android:id="@+id/img_hit1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/hit"
        android:rotation="0"
        android:src="@drawable/ship_hit1" />

    <include layout="@layout/view_joystick" />

    <Button
        android:id="@+id/btn_play_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:text="@string/pause" />

    <TextView
        android:id="@+id/text_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18sp"
        android:text="@string/_0"
        android:textColor="@color/colorFont"
        android:textSize="30sp" />


</FrameLayout>